fix Firefox layout bug

--- a/public/styles.css
+++ b/public/styles.css
@@ -65,6 +65,7 @@ body {
 
 #inputs button img {
     height: 60%;
+    display: block;
     margin: auto;
 }
 
